tests/requests/snapshots/animals/can_delete_one@anim.snap
---
source: tests/requests/animals.rs
assertion_line: 129
expression: "(request.status_code(), request.text())"
---
(
    204,
    "{}",
)
