tests/requests/snapshots/animals/can_post_one@anim.snap
---
source: tests/requests/animals.rs
assertion_line: 106
expression: "(request.status_code(), request.json::<Animal>())"
---
(
    201,
    Animal {
        id: ID
        pid: PID,
        organisation_pid: PID,
        tag_id: "AC025",
        name: "Geoffrey",
        specie_id: ID
        breed_id: ID
        date_of_birth: Some(
            DATE,
        ),
        gender: "male",
        parent_female_id: None,
        parent_male_id: None,
        status: "active",
        purchase_date: Some(
            DATE,
        ),
        purchase_price: Some(
            35000.00,
        ),
        weight_at_birth: None,
        current_weight: Some(
            250.00,
        ),
        notes: None,
        created_by: PID,
        created_at: DATE,
        updated_at: DATE,
    },
)
